[metadata]
name = MultiDBLib
description = A simple database interaction library for MongoDB, PostgreSQL, and MySQL
version = 1.0
    
[options]
packages = find:
package_dir =
    = src
install_requires =
    pymongo
    psycopg2-binary
    pyodbc
python_requires = >=3.6

[options.packages.find]
where=src